# MessageServer

./: .gitignore  CMakeLists.txt  ClientHandler.cpp  ClientHandler.hpp  Constant.hpp  Error.hpp  Global.hpp  Helper.hpp  MemoryManager.hpp  Message.cpp  Message.hpp  MessageHandler.cpp  MessageHandler.hpp  MessageServer.cpp  MessageServer.hpp  Session.cpp  Session.hpp  Vector.hpp  main.cpp
apache/: CMakeLists.txt  Main.cpp  Main.hpp  Request.cpp  Request.hpp  install_apache_mod.sh  mod_msg.cpp  mod_msg.hpp
evaluate/: CMakeLists.txt
evaluate/aio/: CMakeLists.txt  TestPosixAIO.cpp  TestPosixAIO.hpp  test_posix_aio
evaluate/performance/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.hpp  Helper.hpp  Message.cpp  Message.hpp  PerformanceSet.cpp  PerformanceSet.hpp  PerformanceTestSet  Session.hpp  Thread.cpp  Thread.hpp  testconfig.cfg
evaluate/search/: CMakeLists.txt  TestSearch.cpp  test_search
evaluate/thread/: CMakeLists.txt  TestThread.cpp  TestThread.hpp  test_thread
lib/: CMakeLists.txt  Connection.cpp  Connection.hpp  ConnectionLocal.cpp  ConnectionLocal.hpp  ConnectionTCP.hpp
scripts/: add_group.sh  msgserver.init
